[gd_scene load_steps=6 format=3 uid="uid://b23e6scjesh2v"]

[ext_resource type="Texture2D" uid="uid://dtleatk56rjvl" path="res://assets/Player/playerGreen_roll.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://c78eaij4exr3x" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://b66xpcyi8cxm8" path="res://assets/Emote/emote_star.png" id="3_i3pqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 18.0
height = 42.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
slide_on_ceiling = false
floor_stop_on_slope = false
floor_block_on_wall = false
floor_snap_length = 0.0
safe_margin = 0.001
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 5
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4flbx")

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Emote" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -50)
texture = ExtResource("3_i3pqv")

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
